--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -52,7 +52,6 @@
 
             p {
 
-                white-space: nowrap;
                 line-height: 40px;
                 font-size: 24px;
                 color: azure;
@@ -94,13 +93,12 @@
                 }
             }
 
-
         }
     }
 }
 
 
-@media (max-width:450px) {
+@media (max-width:500px) {
     .footer {
         .footer-social-media {
             display: flex;
@@ -118,6 +116,7 @@
 
             .footer-social-media-icons {
                 display: flex;
+                flex-wrap: wrap;
                 margin: 0px 0px;
                 align-items: center;
                 justify-content: center;
@@ -144,16 +143,12 @@
 
 
                 p {
-
-                    white-space: wrap;
                     line-height: 40px;
                     font-size: 20px;
                     color: azure;
                     margin: 35px;
                     margin-top: 30px;
                 }
-
-
 
             }
         }
