--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,6 +1,3 @@
-$color1 : red;
-
-
 .navbar-class {
     height: 60px;
 
@@ -9,6 +6,7 @@ $color1 : red;
 
         //NAV LINK STYLES
         .nav-link {
+
             a {
                 padding: 8px 16px;
                 text-decoration: none;
@@ -20,6 +18,7 @@ $color1 : red;
                     background-color: #222;
                     border-radius: 4px;
                 }
+
             }
 
             font-weight: 500;
@@ -28,7 +27,10 @@ $color1 : red;
             font-size: 20px;
             margin-right: 50px;
             transition: 200ms ease-in-out;
+        }
 
+        #faq {
+            margin-left: 50px;
         }
 
         //NAV LINK STYLES
@@ -93,6 +95,10 @@ $color1 : red;
                 z-index: 999;
                 transition: 50ms ease-in-out;
             }
+
+            #faq {
+                margin-left: 0px;
+            }
         }
     }
 }
@@ -112,11 +118,7 @@ $color1 : red;
 }
 
 
-
-
 @media (max-width:720px) {
-
-
     .navbar-class {
         background-color: rgba(0, 0, 0, 0.7);
         position: absolute;
@@ -147,10 +149,11 @@ $color1 : red;
                     margin-left: 12px;
                 }
 
-                .dropdown {}
+            }
+
+            #faq {
+                margin-left: 0px;
             }
         }
-
-
     }
 }
